--- a/pug/index.pug
+++ b/pug/index.pug
@@ -28,7 +28,7 @@ block content
             li
                 a(href="st-single-course.html") ЛК студент - один курс
             li
-                a(href="st-single-course.html") ЛК студент - один курс 2 колонки
+                a(href="st-single-course-2.html") ЛК студент - один курс 2 колонки
             li
                 a(href="st-task-edit.html") ЛК студент - Задание (редактирование/заполнение)
             li
