--- a/pug/index.pug
+++ b/pug/index.pug
@@ -16,6 +16,8 @@ block content
             li
                 a(href="news.html") Новости
             li
+                a(href="news-a.html") Новости алтернативная
+            li
                 a(href="new.html") Новость
             li
                 a(href="campus.html") Кампус
