--- a/pug/campus.pug
+++ b/pug/campus.pug
@@ -4,7 +4,7 @@ block variables
     - isLogin = true;
 
 block content
-    .post
+    .post.post_camp
         .container_center
             +breadcrumb(['Кампус'])
 
