--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3900,3 +3900,169 @@
         margin-top: 23px;
     }
 }
+
+.newsHead {
+    position: relative;
+    z-index: 1;
+    min-height: 866px;
+    margin-bottom: 98px;
+
+    .breadcrumb {
+        margin-top: 0;
+        padding-top: 35px;
+        color: $color_withe;
+    }
+
+    .page__title {
+        color: $color_withe;
+        width: 50%;
+        flex: none;
+    }
+
+    &__img {
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        left: 0;
+        width: 51.5%;
+        height: 100%;
+
+        img {
+            display: block;
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+            border-radius: 0 0 95px 0;
+        }
+    }
+
+    &__wrap {
+        display: flex;
+        margin-top: 195px;
+    }
+
+    &__content {}
+
+    &__text {
+        background: #2B89F8;
+        border-radius: 15px;
+        color: $color_withe;
+        padding: 71px 82px 98px 104px;
+        font-size: 22px;
+        line-height: 165.52%;
+        margin-bottom: 56px;
+    }
+
+}
+
+.container_center {}
+
+.breadcrumb {}
+
+.newsParts {
+    padding-left: 106px;
+    max-width: 660px;
+
+    &__title {
+        font-size: 28px;
+        font-weight: 500;
+        margin-bottom: 34px;
+    }
+
+    &__list {
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: -30px;
+
+        a {
+            width: 33.3%;
+            color: $color_primary;
+            font-weight: 800;
+            text-transform: uppercase;
+            font-size: 15px;
+            text-decoration-color: transparent;
+            padding-left: 30px;
+            margin-bottom: 26px;
+
+            &:hover {
+                text-decoration-color: initial;
+            }
+        }
+    }
+
+}
+
+.page__title {}
+
+.newsLinks {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 42px 0 97px -76px;
+    // max-width: 1420px;
+
+    &__item {
+        width: 50%;
+        // margin: 0 15px;
+        padding-bottom: 135px;
+        position: relative;
+        display: flex;
+        padding-left: 76px;
+
+        &:nth-child(2n) {
+            border-left: 1px solid #DEDEDE;
+        }
+    }
+
+    &__img {
+        width: 475px;
+        height: 365px;
+        display: block;
+        border-radius: 15px;
+        overflow: hidden;
+
+        img {
+            display: block;
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+            transition: 0.3s;
+            transform: scale(1);
+
+            &:hover {
+                transform: scale(1.05);
+            }
+        }
+    }
+
+    &__descr {
+        position: absolute;
+        background: #F5F6FA;
+        right: 0;
+        bottom: 63px;
+        padding: 24px 28px;
+        width: 404px;
+    }
+
+    &__date {
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 159.52%;
+        letter-spacing: 0.045em;
+        text-transform: uppercase;
+        color: #686472;
+        margin-bottom: 13px;
+    }
+
+    &__name {
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 138.3%;
+        margin-bottom: 9px;
+    }
+
+    &__text {
+        font-size: 14px;
+        line-height: 22px;
+    }
+
+}
