--- a/pug/st-certificate.pug
+++ b/pug/st-certificate.pug
@@ -20,12 +20,12 @@ block content
 
                     p В данном разделе Вы можете получить электронные сертификаты
 
-                    +sert([1,2,3,2,1])
+                    +sert([{img: 1},{img: 2},{img: 3},{img: 2},{img: 1}])
 
                     h2.subtitle Сертификаты в процессе
 
-                    +sert([2,1,4])
+                    +sert([{img: 2, perc: '25%'},{img: 1, perc: '65%'},{img: 4, perc: "97%"}])
 
-                    h2.subtitle Рекомендованные к получению сертификаты
+                    //- h2.subtitle Рекомендованные к получению сертификаты
 
-                    +sert([2,1,4])
+                    //- +sert([2,1,4])
