--- a/pug/st-courses.pug
+++ b/pug/st-courses.pug
@@ -15,7 +15,10 @@ block content
             .lk__body
                 include inc/lk-aside.pug
                 .lk__content
-                    h2.subtitle Траектория
+                    h2.subtitle Рекомендательная система
+                    p Выберите, в каком направлении Вы хотели бы развиваться, и подберем индивидуальную программу обучения для Вас
+
+                    h2.subtitle Компетенции
 
                     .chartBox
                         img(src="img/chart-trangle.jpg", alt="")
