--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1526,6 +1526,31 @@
             bottom: 0;
             background: $color_primary;
             border-radius: 3px;
+
+            &.warning {
+                background: #FFAB48;
+            }
+
+            &.success {
+                background: #279F5E;
+            }
+
+            &.danger {
+                background: #FF3205;
+            }
+
+            &.seccondary {
+                background: #D937BF;
+            }
+
+            &.primary {
+                background: #2B89F8;
+            }
+
+            &.muted {
+                background: #0BF2F2;
+            }
+
         }
     }
 
@@ -2657,8 +2682,35 @@
         font-weight: 500;
         font-size: 16px;
         line-height: 129.3%;
-        text-align: center;
-        padding: 0 35px;
+        // text-align: center;
+        // padding: 0 35px;
+    }
+
+    &__progress {
+        margin-bottom: 26px;
+    }
+
+    &__label {
+        font-size: 13px;
+        line-height: 129.3%;
+        margin-bottom: 10px;
+    }
+
+    &__bar {
+        position: relative;
+        height: 8px;
+        background: #EDEDED;
+        border-radius: 14px;
+
+        span {
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            background: #2B89F8;
+            border-radius: 14px;
+        }
     }
 }
 
